force-app/main/default/objects/Invoice_Line_Item__c/fields/Apply_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Apply_Admin_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Admin Fee</label>
    <type>Checkbox</type>
</CustomField>