force-app/main/default/objects/Invoice_Line_Item__c/fields/Create_Manually__c.field-meta.xml
<CustomField>
    <fullName>Create_Manually__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Manually?</label>
    <type>Checkbox</type>
</CustomField>