force-app/main/default/objects/Invoice_Line_Item__c/fields/Daily_Site_Job__c.field-meta.xml
<CustomField>
    <fullName>Daily_Site_Job__c</fullName>
    <label>Daily Site Job</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>