force-app/main/default/objects/Invoice_Line_Item__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>