force-app/main/default/objects/Invoice_Line_Item__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>IF(
  Apply_Admin_Fee__c  = true &amp;&amp; NOT(ISBLANK( Invoice__r.Contract__r.Admin_Fee__c )),
  Unit_Price__c  * Quantity__c + ( Invoice__r.Contract__r.Admin_Fee__c * (Unit_Price__c  * Quantity__c)),
Unit_Price__c  * Quantity__c
)</formula>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>