force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Editable__c.field-meta.xml
<CustomField>
    <fullName>Total_Editable__c</fullName>
    <description>Gets the value through Total (formula field)</description>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>