force-app/main/default/objects/Invoice_Line_Item__c/fields/Unit_Price_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Invalid__c</fullName>
    <formula>OR(
ISBLANK( Unit_Price__c ),
NOT(ISBLANK( Unit_Price__c )) &amp;&amp; Unit_Price__c = 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price Invalid</label>
    <type>Checkbox</type>
</CustomField>