force-app/main/default/objects/Invoice_Line_Item__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Unit Of Measurement used for the Item</description>
    <label>UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>